<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constr_lay_windialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvTitle_winDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/win_dialog_title"
        android:textColor="#33ab34"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime_winDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="28dp"
        android:text="@string/win_dialog_time"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvTitle_winDialog"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_winDialog" />

    <TextView
        android:id="@+id/tvClicks_winDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="6dp"
        android:text="@string/win_dialog_attempts"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="@+id/tvTime_winDialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime_winDialog" />

    <TextView
        android:id="@+id/tvFields_winDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="6dp"
        android:text="@string/win_dialog_fields"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="@+id/tvTime_winDialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClicks_winDialog" />

    <TextView
        android:id="@+id/tvScore_winDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/win_dialog_score"
        android:textColor="@android:color/white"
        android:textSize="28sp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tvTime_winDialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFields_winDialog" />

    <TextView
        android:id="@+id/tvHighScore_winDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="6dp"
        android:text="@string/win_dialog_highscore"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/tvScore_winDialog"
        app:layout_constraintTop_toBottomOf="@+id/tvScore_winDialog" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tvHighScore_winDialog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle_winDialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTime_winDialog">


        <Button
            android:id="@+id/btnReset_winDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/win_dialog_reset_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/win_dialog_btn_text_size" />

        <Button
            android:id="@+id/btnReturn_winDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/win_dialog_return_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/win_dialog_btn_text_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivExclamation_winDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvHighScore_winDialog"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/tvScore_winDialog"
        app:layout_constraintTop_toTopOf="@+id/tvScore_winDialog"
        app:srcCompat="@drawable/cup" />


</android.support.constraint.ConstraintLayout>

